# Proxy-GS

./: .gitignore  README.md  change_json.py  comapre.py  curve.py  dense.sh  download.sh  index.html  mesh_render.py  metrics_mask.py  render.py  render_mesh.py  render_real.py  requirements.txt  run.sh  run_1.sh  run_2.sh  run_3.sh  run_all_scenes.sh  run_cvpr.sh  run_cvpr1.sh  run_cvpr2.sh  run_cvpr_origion.sh  single_train.sh  soft_chart.py  time_bar.py  train.py
Mesh2DepthHelper/: Mesh2DepthHelper.py  __init__.py
ProxyGS-Vulkan-Cuda-Interop/: .gitattributes  .gitignore  CMakeLists.txt  build_pyext_only.sh
ProxyGS-Vulkan-Cuda-Interop/cmake/: FindNvproCore2.cmake  nvpro_patch.cmake
ProxyGS-Vulkan-Cuda-Interop/nv_repo/nvpro_core2/nvapp/: application.cpp  application.hpp
ProxyGS-Vulkan-Cuda-Interop/nv_repo/nvpro_core2/nvvk/: context.cpp
ProxyGS-Vulkan-Cuda-Interop/python/: depth_roundtrip.py  example_usage.py  test_vk2torch_cuda.py  vk2torch_cuda.py  vk2torch_renderer copy.py  vk2torch_renderer.py  vk2torch_utils.py
ProxyGS-Vulkan-Cuda-Interop/python/examples/: basic_render.py  batch_rendering.py  orbital_motion.py  pybind_timeline_roundtrip.py
ProxyGS-Vulkan-Cuda-Interop/shaders/: culling.glsl  render_raster.frag.glsl  shaderio_building.h  traversal.glsl  traversal_init.comp.glsl  traversal_run.comp.glsl  traversal_run_separate_groups.comp.glsl
ProxyGS-Vulkan-Cuda-Interop/src/: asset_resolver.cpp  asset_resolver.hpp  external_memory.cpp  external_memory.hpp  hbao_pass.cpp  hbao_pass.hpp  lodclusters.cpp  lodclusters.hpp  lodclusters_ui.cpp  main.cpp  renderer.hpp  renderer_raster_clusters_lod.cpp  renderer_raytrace_clusters_lod.cpp  resources.cpp  resources.hpp  scene.cpp
ProxyGS-Vulkan-Cuda-Interop/src/core/: context_bootstrap.cpp  context_bootstrap.hpp
ProxyGS-Vulkan-Cuda-Interop/src/pybind/: vk2torch_ext.cpp
ProxyGS-Vulkan-Cuda-Interop/toolchains/: conda_compatible.cmake  system_no_conda.cmake
arguments/: __init__.py
gaussian_renderer/: __init__.py
gaussian_renderer_inference/: __init__.py
pose_block/block_1/: transforms_test.json  transforms_train.json
pose_block/block_2/: transforms_test.json  transforms_train.json
pose_block/block_3/: transforms_test.json  transforms_train.json
pose_block/block_4/: transforms_test.json  transforms_train.json
pose_block/block_5/: transforms_test.json  transforms_train.json
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
submodules/diff-gaussian-rasterization/: rasterize_points.cu  rasterize_points.h
submodules/diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  forward.cu  forward.h  forward_reweighted.cu  rasterizer.h  rasterizer_impl.cu
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
utils/: camera_utils.py
